# blerpc-protocol

./: .clang-format  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
c/: CMakeLists.txt  Kconfig
c/include/blerpc_protocol/: command.h  container.h  crypto.h
c/src/: command.c  container.c  crypto.c
src/blerpc_protocol/: __init__.py  command.py  container.py  crypto.py
tests/c/: test_crypto.c  test_standalone.c
tests/python/: test_command.py  test_container.py  test_crypto.py
